kubernetes/pihole/redirect-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pihole-admin-redirect
spec:
  redirectRegex:
    regex: "^https?://pihole\\.lambertlab\\.us/?$"
    replacement: "https://pihole.lambertlab.us/admin/"
