kubernetes/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pihole
  namespace: default
  labels:
    kubernetes.io/service-name: pihole
addressType: IPv4
ports:
  - port: 80
endpoints:
  - addresses:
      - "100.124.184.120"
